# skill-grocery-receipt-processor

./: .env.example  .gitignore  AGENTS.md  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
docs/: query_subcomand_spec.md  receipt_processing_skill_spec.md
src/receipt_processor/: __init__.py  __main__.py  cli.py  config.py  db.py  errors.py  llm_agent.py  pdf_extract.py  pipeline.py  query.py  schemas.py  taxonomy.py  units.py  validate.py
tests/: test_cli.py  test_llm_agent.py  test_normalization.py  test_pipeline.py  test_query.py
